--- a/index.html
+++ b/index.html
@@ -127,8 +127,17 @@
                     </div>
                 </div>
                 <!-- SUB -->
-                <div id="Sub">
-            
+                <div id="sub">
+                    <div class="row">
+                        <div class="col l-12 black-bgr sub">
+                            <h1 class="white-text family-mont sub__head">Subscribe</h1>
+                            <p class="white-text family-mont sub__des font-15">To get special offers and VIP treatment:</p>
+                            <div class="sub__email">
+                                <input class="sub__enter-email" type="text" placeholder="Enter E-mail">
+                            </div>
+                            <button class="sub__btn font-18">Subscribe</button>
+                        </div>
+                    </div>
                 </div>
                 <!-- ABOUT -->
                 <div id="About">
