Add About + Footer

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 </head>
 <body>
     <!-- Navigation-->
-    <div class="grid wide">
+    <div class="grid wide family-mont text-spac">
         <div class="row">
             <div id="nav" class="col l-2-4"> 
-                <div class="logo"><h1 class="font-24 black-text family-mont font-wei-500">LOGO</h1></div>
-                <div class="content family-mont">
+                <div class="logo"><h1 class="font-24 grey-text font-wei-500">LOGO</h1></div>
+                <div class="content">
                     <ul class="content__table font-15 content__shirt">
                         <li><a href="">Shirts</a></li>
                         <li><a href="">Dresses</a></li>
                         <li class="extend">
-                            <a class="black-text">Jeans <i class="ti-angle-double-down extend-icon" ></i></a>
+                            <a class="grey-text">Jeans <i class="ti-angle-double-down extend-icon" ></i></a>
                             <ul>
                                 <li><a href=""><i class="ti-angle-right right-icon"></i>Skinny</a></li>
                                 <li><a href="">Relaxed</a></li>
@@ -34,7 +34,7 @@
                         <li><a href="">Blazers</a></li>
                         <li><a href="">Shoes</a></li>
                     </ul>
-                    <ul class="content__table content__navig font-13">
+                    <ul class="content__table content__navig font-12">
                         <li><a href="">Contacts</a></li>
                         <li><a href="">Newsletter</a></li>
                         <li><a href="">Subscribe</a></li>
@@ -47,7 +47,7 @@
                 <div id="header">
                     <div class="row header__row">
                         <div class="col l-2">
-                            <div class=""><h1 class="black-text family-mont font-24 font-wei-500">Jeans</h1></div>
+                            <div class=""><h1 class="grey-text font-24 font-wei-500">Jeans</h1></div>
                         </div>
                         <div class="col l-2 l-o-8 header-icon">
                             <i class="ti-shopping-cart"></i>
@@ -72,56 +72,56 @@
                             <div class="product">
                                 <div class="picture"><img src="./assets/img/jeans1.jpg" alt=""></div>
                                 <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price black-text">$24.99</p>
+                                <p class="pro-price grey-text">$24.99</p>
                             </div>
                         </div>
                         <div class="col l-3">
                             <div class="product">
                                 <div class="picture"><img src="./assets/img/jeans2.jpg" alt=""></div>
                                 <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price black-text">$24.99</p>
+                                <p class="pro-price grey-text">$24.99</p>
                             </div>
                         </div>
                         <div class="col l-3">
                             <div class="product">
                                 <div class="picture"><img src="./assets/img/jeans3.jpg" alt=""></div>
                                 <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price black-text">$24.99</p>
+                                <p class="pro-price grey-text">$24.99</p>
                             </div>
                         </div>
                         <div class="col l-3">
                             <div class="product">
                                 <div class="picture"><img src="./assets/img/jeans4.jpg" alt=""></div>
                                 <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price black-text">$24.99</p>
+                                <p class="pro-price grey-text">$24.99</p>
                             </div>
                         </div>
                         <div class="col l-3">
                             <div class="product">
                                 <div class="picture"><img src="./assets/img/jeans5.jpg" alt=""></div>
                                 <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price black-text">$24.99</p>
+                                <p class="pro-price grey-text">$24.99</p>
                             </div>
                         </div>
                         <div class="col l-3">
                             <div class="product">
                                 <div class="picture"><img src="./assets/img/jeans6.jpg" alt=""></div>
                                 <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price black-text">$24.99</p>
+                                <p class="pro-price grey-text">$24.99</p>
                             </div>
                         </div>
                         <div class="col l-3">
                             <div class="product">
                                 <div class="picture"><img src="./assets/img/jeans7.jpg" alt=""></div>
                                 <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price black-text">$24.99</p>
+                                <p class="pro-price grey-text">$24.99</p>
                             </div>
                         </div>
                         <div class="col l-3">
                             <div class="product">
                                 <div class="picture"><img src="./assets/img/jeans8.jpg" alt=""></div>
                                 <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price black-text">$24.99</p>
+                                <p class="pro-price grey-text">$24.99</p>
                             </div>
                         </div>
                     </div>
@@ -130,8 +130,8 @@
                 <div id="sub">
                     <div class="row">
                         <div class="col l-12 black-bgr sub">
-                            <h1 class="white-text family-mont sub__head">Subscribe</h1>
-                            <p class="white-text family-mont sub__des font-15">To get special offers and VIP treatment:</p>
+                            <h1 class="white-text sub__head">Subscribe</h1>
+                            <p class="white-text sub__des font-15">To get special offers and VIP treatment:</p>
                             <div class="sub__email">
                                 <input class="sub__enter-email" type="text" placeholder="Enter E-mail">
                             </div>
@@ -141,11 +141,70 @@
                 </div>
                 <!-- ABOUT -->
                 <div id="About">
-            
+                    <div class="row grey-bgr about__row">
+                        <div class="col l-4">
+                            <div class="contact">
+                                <h1 class="contact__head text-center font-18 font-wei-400">Contact</h1>
+                                <p class="contact__des text-center font-12">Questions? Go ahead.</p>
+                                <form class="contact__form" action="">
+                                    <div class="contact__form-input"><input type="text" class="text-box wd-100" placeholder="Name"></div>
+                                    <div class="contact__form-input"><input type="text" class="text-box wd-100" placeholder="Email"></div>
+                                    <div class="contact__form-input"><input type="text" class="text-box wd-100" placeholder="Subject"></div>
+                                    <div class="contact__form-input"><input type="text" class="text-box wd-100" placeholder="Messsage"></div>
+                                    <button class="contact__btn text-center black-bgr white-text wd-100">Send</button>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="col l-4">
+                            <div class="about">
+                                <h1 class="contact__head text-center font-18 font-wei-400">About</h1>
+                                <ul class="font-12 about__list">
+                                    <li><a class="grey-text" href="#">About us</a></li>
+                                    <li><a class="grey-text" href="#">We're hiring</a></li>
+                                    <li><a class="grey-text" href="#">Support</a></li>
+                                    <li><a class="grey-text" href="#">Find store</a></li>
+                                    <li><a class="grey-text" href="#">Shipment</a></li>
+                                    <li><a class="grey-text" href="#">Payment</a></li>
+                                    <li><a class="grey-text" href="#">Gift card</a></li>
+                                    <li><a class="grey-text" href="#">Return</a></li>
+                                    <li><a class="grey-text" href="#">Help</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col l-4 store">
+                            <div class="store">
+                                <h1 class="contact__head font-18 font-wei-400">Store</h1>
+                                <div class="store__list font-12">
+                                    <p><i class="ti-location-pin"></i>Company Name</p>
+                                    <p><i class="ti-mobile"></i>0044123123</p>
+                                    <p><i class="ti-email"></i>ex@mail.com</p>
+                                </div>
+                            </div>
+                            <div class="accept">
+                                <h1 class="contact__head font-18 font-wei-400">We accept</h1>
+                                <div class="accept__list font-12">
+                                    <p><i class="ti-credit-card"></i>Amex</p>
+                                    <p><i class="ti-share"></i>Credit Card</p>
+                                </div>
+                            </div>
+                            <div class="social">
+                                <i class="ti-facebook"></i>
+                                <i class="ti-microsoft-alt"></i>
+                                <i class="ti-youtube"></i>
+                                <i class="ti-pinterest-alt"></i>
+                                <i class="ti-twitter-alt"></i>
+                                <i class="ti-soundcloud"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- FOOTER -->
                 <div id="footer">
-            
+                    <div class="row">
+                        <div class="col l-12 black-bgr">
+                            <p class="footer__des text-center white-text font-15">Powered by <a href="#">w3.css</a></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
