--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/732/732212.png">
     <link rel="stylesheet" href="./assets/css/grid_system.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- <link rel="stylesheet" href="./assets/css/responsive.css"> -->
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="grid wide family-mont text-spac">
         <div class="row">
             <div id="nav" class="col l-2-4"> 
-                <div class="logo"><h1 class="font-24 grey-text font-wei-500">LOGO</h1></div>
+                <div class="logo"><h1 class="font-24 black-text font-wei-500">LOGO</h1></div>
                 <div class="content">
                     <ul class="content__table font-15 content__shirt">
                         <li><a href="">Shirts</a></li>
@@ -59,69 +59,78 @@
                 <div id="body">
                     <div class="row">
                         <div class="col l-12">
-                            <div class="picture">
-                                <img src="./assets/img/jeans.jpg" alt="jeans.jpg">
+                            <div class="banner">
+                                <div class="picture">
+                                    <img src="./assets/img/jeans.jpg" alt="jeans.jpg">
+                                </div>
+                                <div class="picture__des white-text">
+                                    <h1 class="font-wei-500">New arrivals</h1>
+                                    <h2 class="font-wei-400">COLLECTION 2016</h2>
+                                    <a href="#list-items">SHOP NOW</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col l-12"><p class="number-items grey-text">8 items</p></div>
                     </div>
-                    <div class="row">
-                        <div class="col l-3">
-                            <div class="product">
-                                <div class="picture"><img src="./assets/img/jeans1.jpg" alt=""></div>
-                                <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price grey-text">$24.99</p>
+                    <div id="list-items">
+                        <div class="row">
+                            <div class="col l-3">
+                                <div class="product">
+                                    <div class="picture"><img src="./assets/img/jeans1.jpg" alt=""></div>
+                                    <p class="pro-name grey-text">Ripped Skinny Jeans</p>
+                                    <p class="pro-price grey-text">$24.99</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col l-3">
-                            <div class="product">
-                                <div class="picture"><img src="./assets/img/jeans2.jpg" alt=""></div>
-                                <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price grey-text">$24.99</p>
+                            <div class="col l-3">
+                                <div class="product">
+                                    <div class="picture"><img src="./assets/img/jeans2.jpg" alt=""></div>
+                                    <p class="pro-name grey-text">Ripped Skinny Jeans</p>
+                                    <p class="pro-price grey-text">$24.99</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col l-3">
-                            <div class="product">
-                                <div class="picture"><img src="./assets/img/jeans3.jpg" alt=""></div>
-                                <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price grey-text">$24.99</p>
+                            <div class="col l-3">
+                                <div class="product">
+                                    <div class="picture"><img src="./assets/img/jeans3.jpg" alt=""></div>
+                                    <p class="pro-name grey-text">Ripped Skinny Jeans</p>
+                                    <p class="pro-price grey-text">$24.99</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col l-3">
-                            <div class="product">
-                                <div class="picture"><img src="./assets/img/jeans4.jpg" alt=""></div>
-                                <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price grey-text">$24.99</p>
+                            <div class="col l-3">
+                                <div class="product">
+                                    <div class="picture"><img src="./assets/img/jeans4.jpg" alt=""></div>
+                                    <p class="pro-name grey-text">Ripped Skinny Jeans</p>
+                                    <p class="pro-price grey-text">$24.99</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col l-3">
-                            <div class="product">
-                                <div class="picture"><img src="./assets/img/jeans5.jpg" alt=""></div>
-                                <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price grey-text">$24.99</p>
+                            <div class="col l-3">
+                                <div class="product">
+                                    <div class="picture"><img src="./assets/img/jeans5.jpg" alt=""></div>
+                                    <p class="pro-name grey-text">Ripped Skinny Jeans</p>
+                                    <p class="pro-price grey-text">$24.99</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col l-3">
-                            <div class="product">
-                                <div class="picture"><img src="./assets/img/jeans6.jpg" alt=""></div>
-                                <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price grey-text">$24.99</p>
+                            <div class="col l-3">
+                                <div class="product">
+                                    <div class="picture"><img src="./assets/img/jeans6.jpg" alt=""></div>
+                                    <p class="pro-name grey-text">Ripped Skinny Jeans</p>
+                                    <p class="pro-price grey-text">$24.99</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col l-3">
-                            <div class="product">
-                                <div class="picture"><img src="./assets/img/jeans7.jpg" alt=""></div>
-                                <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price grey-text">$24.99</p>
+                            <div class="col l-3">
+                                <div class="product">
+                                    <div class="picture"><img src="./assets/img/jeans7.jpg" alt=""></div>
+                                    <p class="pro-name grey-text">Ripped Skinny Jeans</p>
+                                    <p class="pro-price grey-text">$24.99</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col l-3">
-                            <div class="product">
-                                <div class="picture"><img src="./assets/img/jeans8.jpg" alt=""></div>
-                                <p class="pro-name grey-text">Ripped Skinny Jeans</p>
-                                <p class="pro-price grey-text">$24.99</p>
+                            <div class="col l-3">
+                                <div class="product">
+                                    <div class="picture"><img src="./assets/img/jeans8.jpg" alt=""></div>
+                                    <p class="pro-name grey-text">Ripped Skinny Jeans</p>
+                                    <p class="pro-price grey-text">$24.99</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -147,11 +156,11 @@
                                 <h1 class="contact__head text-center font-18 font-wei-400">Contact</h1>
                                 <p class="contact__des text-center font-12">Questions? Go ahead.</p>
                                 <form class="contact__form" action="">
-                                    <div class="contact__form-input"><input type="text" class="text-box wd-100" placeholder="Name"></div>
-                                    <div class="contact__form-input"><input type="text" class="text-box wd-100" placeholder="Email"></div>
-                                    <div class="contact__form-input"><input type="text" class="text-box wd-100" placeholder="Subject"></div>
-                                    <div class="contact__form-input"><input type="text" class="text-box wd-100" placeholder="Messsage"></div>
-                                    <button class="contact__btn text-center black-bgr white-text wd-100">Send</button>
+                                    <div class="contact__form-input"><input required type="text" class="text-box wd-100" placeholder="Name"></div>
+                                    <div class="contact__form-input"><input required type="email" class="text-box wd-100" placeholder="Email"></div>
+                                    <div class="contact__form-input"><input required type="text" class="text-box wd-100" placeholder="Subject"></div>
+                                    <div class="contact__form-input"><input required type="text" class="text-box wd-100" placeholder="Messsage"></div>
+                                    <input value="Send" type="submit" class="contact__btn text-center black-bgr white-text wd-100"></input>
                                 </form>
                             </div>
                         </div>
@@ -202,7 +211,7 @@
                 <div id="footer">
                     <div class="row">
                         <div class="col l-12 black-bgr">
-                            <p class="footer__des text-center white-text font-15">Powered by <a href="#">w3.css</a></p>
+                            <p class="footer__des text-center white-text font-15">Powered by <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a></p>
                         </div>
                     </div>
                 </div>
