Add Responsive Tablet + Mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation-->
     <div class="grid wide family-mont text-spac">
         <div class="row">
-            <div id="nav" class="col l-2-4"> 
+            <div id="nav" class="col l-2-4 m-0 c-0"> 
                 <div class="logo"><h1 class="font-24 black-text font-wei-500">LOGO</h1></div>
                 <div class="content">
                     <ul class="content__table font-15 content__shirt font-wei-500">
@@ -38,26 +38,26 @@
                         <li><a href="">Shoes</a></li>
                     </ul>
                     <ul class="content__table content__navig font-12">
-                        <li><a href="">Contacts</a></li>
+                        <li><a href="#About">Contacts</a></li>
                         <li>
                             <label for="news" class="extend__btn">
                                 <a class="black-text">Newsletter</a>
                             </label>
                         </li>
                         
-                        <li><a href="">Subscribe</a></li>
+                        <li><a href="#sub">Subscribe</a></li>
                     </ul>
                 </div>
             </div>
         
-            <div id="body" class="col l-o-2-4">
+            <div id="body" class="col l-o-2-4 l-9-6 m-12 c-12">
                 <!-- HEADER -->
                 <div id="header">
                     <div class="row header__row">
-                        <div class="col l-2">
+                        <div class="col l-2 m-2 c-2">
                             <div class=""><h1 class="grey-text font-24 font-wei-500">Jeans</h1></div>
                         </div>
-                        <div class="col l-2 l-o-8 header-icon">
+                        <div class="col l-2 l-o-8 m-2 m-o-8 c-2 c-o-8 header-icon">
                             <i class="ti-shopping-cart"></i>
                             <i class="ti-search"></i>
                         </div>
@@ -84,7 +84,7 @@
                     </div>
                     <div id="list-items">
                         <div class="row font-15">
-                            <div class="col l-3">
+                            <div class="col l-3 m-4 c-6">
                                 <div class="product">
                                     <h4 class="product__new black-bgr white-text">New</h4>
                                     <div class="picture">
@@ -97,7 +97,7 @@
                                     <p class="pro-price grey-text">$24.99</p>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 m-4 c-6">
                                 <div class="product">
                                     <h4 class="product__new black-bgr white-text">New</h4>
                                     <div class="picture">
@@ -110,7 +110,7 @@
                                     <p class="pro-price grey-text">$24.99</p>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 m-4 c-6">
                                 <div class="product">
                                     <h4 class="product__new black-bgr white-text">New</h4>
                                     <div class="picture">
@@ -123,7 +123,7 @@
                                     <p class="pro-price grey-text">$24.99</p>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 m-4 c-6">
                                 <div class="product">
                                     <h4 class="product__new black-bgr white-text">New</h4>
                                     <div class="picture">
@@ -136,7 +136,7 @@
                                     <p class="pro-price grey-text">$24.99</p>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 m-4 c-6">
                                 <div class="product">
                                     <h4 class="product__new black-bgr white-text">Sale</h4>
                                     <div class="picture">
@@ -149,7 +149,7 @@
                                     <p class="pro-price grey-text">$24.99</p>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 m-4 c-6">
                                 <div class="product">
                                     <h4 class="product__new black-bgr white-text">Sale</h4>
                                     <div class="picture">
@@ -162,7 +162,7 @@
                                     <p class="pro-price grey-text">$24.99</p>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 m-4 c-6">
                                 <div class="product">
                                     <h4 class="product__new black-bgr white-text">Sale</h4>
                                     <div class="picture">
@@ -175,7 +175,7 @@
                                     <p class="pro-price grey-text">$24.99</p>
                                 </div>
                             </div>
-                            <div class="col l-3">
+                            <div class="col l-3 m-4 c-6">
                                 <div class="product">
                                     <h4 class="product__new black-bgr white-text">Sale</h4>
                                     <div class="picture">
@@ -194,7 +194,7 @@
                 <!-- SUB -->
                 <div id="sub">
                     <div class="row">
-                        <div class="col l-12 black-bgr sub">
+                        <div class="col l-12 m-12 c-12 black-bgr sub">
                             <h1 class="white-text sub__head">Subscribe</h1>
                             <p class="white-text sub__des font-15">To get special offers and VIP treatment:</p>
                             <div class="sub__email">
@@ -207,7 +207,7 @@
                 <!-- ABOUT -->
                 <div id="About">
                     <div class="row grey-bgr about__row">
-                        <div class="col l-4">
+                        <div class="col l-4 m-4 c-12">
                             <div class="contact">
                                 <h1 class="contact__head text-center font-18 font-wei-400">Contact</h1>
                                 <p class="contact__des text-center font-12">Questions? Go ahead.</p>
@@ -220,7 +220,7 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="col l-4">
+                        <div class="col l-4 m-4 c-12">
                             <div class="about">
                                 <h1 class="contact__head text-center font-18 font-wei-400">About</h1>
                                 <ul class="font-12 about__list">
@@ -236,7 +236,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col l-4 store">
+                        <div class="col l-4 m-4 c-12 store">
                             <div class="store">
                                 <h1 class="contact__head font-18 font-wei-400">Store</h1>
                                 <div class="store__list font-12">
@@ -266,7 +266,7 @@
                 <!-- FOOTER -->
                 <div id="footer">
                     <div class="row">
-                        <div class="col l-12 black-bgr">
+                        <div class="col l-12 m-12 c-12 black-bgr">
                             <p class="footer__des text-center white-text font-15">Powered by <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a></p>
                         </div>
                     </div>
@@ -274,7 +274,7 @@
             </div>
         </div>
         <div class="news">
-            <input type="checkbox" name="" id="news" class="news__checkbox">
+            <input hidden type="checkbox" name="" id="news" class="news__checkbox">
             <div class="background"></div>
             <div class="news__content">
                 <h1 class="news__content-head">NEWSLETTER</h1>
